...
                android:layout_height="wrap_content"
                android:text="Login"
                android:textSize="30dp"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-medium"
                android:layout_marginTop="10dp"
                android:id="@+id/login_button">
            </Button>
        </RelativeLayout>

    </RelativeLayout>


...
